tests/NormalTests/paczka1/small_fuzzy/63199450.err
Error in line 5: utF3t S148 95,9
Error in line 9: iHjOqT2E915 S448 73,2
Error in line 11: 0rqOAo S148 12,6
